# rust-rabbitmq-demo

./: Cargo.toml  Dockefile_receive  Dockerfile_receive  Dockerfile_send  README.md  docker-compose.yaml  quote.js
.github/workflows/: rust.yml  test.yaml
k8s/: README.md  app.yaml  cluster.yaml  deploy.yaml  monitoring.yaml
