[package]
name = "rust-rabbitmq-demo"
version = "1.0.0"
authors = ["John Sigvald Skauge <johnsigvaldskauge@tv2.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.4", default-features = false }
reqwest = { version = "0.10.9", features= ["blocking", "json"]}
serde = "1.0.117"
serde_derive = "1.0.117"
tokio = { version = "0.2", features = ["full"] }
names = "0.11.0"
rand = "0.7.3"
